[build-system]
requires = ["poetry-core>=2.1.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "toboggan"
version = "1.0.0"
description = "Bring intelligence to any remote command execution (RCE)."
authors = [
    {name = "n3rada"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "prompt-toolkit (>=3.0.20,<4.0.0)",
    "tqdm (>=4.61.0,<5.0.0)",
    "httpx (>=0.28.0)",
    "pycryptodomex (>=3.10.1,<4.0.0)",
    "modwrap (>=1.1.4,<2.0.0)",
]

[project.urls]
repository  = "https://github.com/n3rada/toboggan"

[project.scripts]
toboggan = 'toboggan.cli:main'

