[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "toboggan"
version = "0.9.1"
description = "Bring intelligence to any remote command execution (RCE)."
authors = [
    { name = "n3rada" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "modwrap>=1.1.7",
    "prompt-toolkit>=3.0.52",
    "pycryptodomex>=3.23.0",
    "tqdm>=4.67.3",
]

[project.urls]
repository = "https://github.com/n3rada/toboggan"

[project.scripts]
toboggan = "toboggan.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
