[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "toboggan"
version = "0.9.3"
description = "Turn any RCE primitive into a semi-interactive shell with forward shell and post-exploitation actions."
authors = [
    { name = "n3rada", email = "72791564+n3rada@users.noreply.github.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11,<4.0"

keywords = [
    "post-exploitation", "web-shell", "rce", "command-injection", "blind-rce",
    "forward-shell", "reverse-shell", "mkfifo", "named-pipe",
    "red-team", "pentesting", "offensive-security", "privilege-escalation",
    "shell-upgrade", "obfuscation", "ctf", "python",
    "linux", "windows",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Shells",
    "Topic :: System :: Networking",
]

dependencies = [
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "modwrap>=1.1.7",
    "prompt-toolkit>=3.0.52",
    "pycryptodomex>=3.23.0",
    "tqdm>=4.67.3",
]

[project.urls]
repository = "https://github.com/n3rada/toboggan"
homepage = "https://github.com/n3rada/toboggan"
documentation = "https://github.com/n3rada/toboggan/blob/main/README.md"

[project.scripts]
toboggan = "toboggan.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
